scala的一点笔记

--- a/Scala笔记/函数式编程.md
+++ b/Scala笔记/函数式编程.md
@@ -8,5 +8,19 @@
 惰性求值
 递归函数：递归实现循环
 优点：生产效率高、易于推理、并行编程、多核计算、云计算
-崛起：
+
+#Scala环境安装
+
+# Scala基础
+val 常量
+var 变量
+lazy val 第一次使用的时候才求值
+# scala变量类型
+Byte Short Int Long Float Double Boolean Char 
+Unit:无副作用
+String 字符串插值 s"my name is ${name}"
+{}代码快
+def functionName(parma:ParmaType):ReturnType={}
+
+
 
